@@ -1,3 +1,11 @@
+2008-04-04  Christian Kellner  <gicmo@gnome.org>
+
+	* daemon/gvfsbackenddav.c:
+	Implement set_display_name. (#525980) 
+	With this patch we also do our own redirection handling which
+	alyways allows redirects from /a/b -> /a/b/ (trainling slashes)
+	even for non safe methods. Also some code was cleaned up.
+
 2008-04-02  Christian Kellner  <gicmo@gnome.org>
 
 	* hal/hal-utils.h:
